# Ortografia

./: .pre-commit-config.yaml  README.adoc  justfile  pyproject.toml
Ortografia/: __init__.py  analyze.py  beta_scoring_function.py  cli.py  ifaces.py  logger.py  orthography_questions.py  question_selection.py  quiz_app.py  word_parser.py
tests/: add_dictionary.py  polish_frequent_words.txt  quiz_app.py  quiz_input.txt  quiz_input_ch.txt  quiz_input_h.txt  sofia.py  test_analyze.py  test_words.txt  test_words_small.txt
