[tool.poetry]
name = "Ortografia"
version = "0.1.0"
description = "A simple library for checking the spelling of the text."
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
packages = [{ include = "Ortografia"}]
#readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
pydantic = "^2.10.6"

[poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
