[tool.poetry]
name = "Ortografia"
version = "1.0.2"
description = "A simple library for checking the spelling of the text."
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
packages = [{ include = "Ortografia"}]
#readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
pydantic = "^2.10.6"
rich = "^13.9.4"
click = "^8.1.8"

[poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = "/home/adam/.cache/pypoetry/virtualenvs/ortografia--wTfDlEi-py3.12"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = "error"
reportInvalidTypeForm = false

[tool.poetry.scripts]
ortografia = "Ortografia.cli:cli"
